# vistui

./: .bandit  .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  devbox.json  justfile  mypy.ini  pyproject.toml
.opencode/agents/: backend.md  git-commit-pusher.md  software_architect.md
.opencode/commands/: update_agents.md
deployments/: docker-compose.dev.yml
deployments/hooks/: pre-commit  pre-push
documentations/: old_startingpoint.md
documentations/architecture/: api-contract.md  batch-consolidation.md  data-model.md  infrastructure.md  llm-provider.md  pre-implementation-decisions.md  retrieval-system.md  system-overview.md
documentations/architecture/backend/: auth.md  backend-structure.md  data-flow.md  database.md  error-handling.md  features.md  schema-strategy.md  testing.md
migrations/: env.py
migrations/versions/: 0001_create_user_table.py
plan/: plan1.md
sources/backend/: database.py  exceptions.py  logconfig.py  main.py  seeders.py  settings.py
sources/backend/auth/: apis.py  dependencies.py  services.py
sources/backend/user/: apis.py  models.py  schemas.py  services.py  stores.py
sources/backend/utils/: security.py
tests/backend/: conftest.py
tests/backend/auth/: test_login.py
